--- a/WebContent/CSS/MasterStyle.css
+++ b/WebContent/CSS/MasterStyle.css
@@ -1,5 +1,5 @@
 @CHARSET "ISO-8859-1";
-.div1 
+.topbar 
 {
     background-color: rgb(148, 183, 51);
 }
@@ -7,14 +7,19 @@
 
 .search 
 {
+	margin-right:10em;
+	margin-left:20em;
 	align:center;
 	height:50px;
-    width: 200px;
+    width: 500px;
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;	
 }
 
-.dropbtn {
+.dropbtn
+{
+	font-family: Arial, Helvetica, sans-serif;
+	margin-left:5em;
 	align:right;
     background-color: #4CAF50;
     color: white;
@@ -24,17 +29,19 @@
     cursor: pointer;
 }
 
-.dropbtn:hover, .dropbtn:focus {
+.dropbtn:hover, .dropbtn:focus 
+{
     background-color: #3e8e41;
 }
 
-.dropdown {
+.dropdown 
+{
     position: relative;
     display: inline-block;
 }
 
-.dropdown-content {
-	
+.dropdown-content 
+{	
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -43,7 +50,8 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
-.dropdown-content a {
+.dropdown-content a 
+{
     color: black;
     padding: 12px 16px;
     text-decoration: none;
@@ -53,3 +61,21 @@
 .dropdown a:hover {background-color: #f1f1f1}
 
 .show {display:block;}
+
+
+.topbarLink
+{
+	font-family: Arial, Helvetica, sans-serif;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+
+.topbarLink:hover, .topbarLink:active 
+{
+     background-color: #3e8e41;
+}
